# minidlna

./: .gitignore  CMakeLists.txt  Makefile.am  README  config.h.cmake.in  config.h.in  configure.ac  metadata.c  minidlna.c  minidlna.conf  minidlna.conf.in  scanner.h  upnpglobalvars.c  upnpglobalvars.h  upnphttp.c  upnpsoap.c  utils.c
archlinux/: PKGBUILD
cmake/Includes/: DefineOptions.cmake
cmake/Modules/: FindEXIF.cmake  FindFFmpeg.cmake  FindFLAC.cmake  FindID3tag.cmake  FindIconv.cmake  FindSQLite3.cmake  FindVorbisFile.cmake
icons/: CMakeLists.txt
man/: CMakeLists.txt
po/: CMakeLists.txt
src/: CMakeLists.txt  albumart.c  albumart.h  config.h.in  containers.c  crypt.c  crypt.h  getifaddr.c  getifaddr.h  image_utils.c  inotify.c  libav.h  log.c  log.h  metadata.c  minidlna.c  minidlna.h  minidlnapath.h  minidlnatypes.h  minissdp.c  minixml.c  options.c  options.h  playlist.c  process.c  process.h  scanner.c  scanner.h  scanner_sqlite.h  sql.c  sql.h  upnpevents.c  upnpglobalvars.c  upnpglobalvars.h  upnphttp.c  utils.c  utils.h  video_thumb.c  xml.c  xml.h
src/cmake/Includes/: ConfigureChecks.cmake
src/upnp/: minissdp.c  minissdp.h  ssdp.c  ssdp.h  svc_connectionmgr.c  svc_connectionmgr.h  svc_contentdirectory.c  svc_contentdirectory.h  svc_x_ms_mediareceiverregistrar.c  svc_x_ms_mediareceiverregistrar.h  svcdesc.c  svcdesc.h  upnpdescgen.c  upnpdescgen.h  upnpevents.c  upnphttp.c  upnphttp.h  upnpsoap.c
systemd/: CMakeLists.txt  minidlna.service.in  minidlna.sysusers.in  minidlna.tmpfiles.in
